turtleart.triangle.Triangle.scala.error
Erreur de compilation :
Triangle:10: error: Unmatched closing brace '}' ignored here
}
^